--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,87 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+/* ------ main settings ------ */
+html, body, div, span, applet, object, iframe,
+p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  border: 0;
+  color: #666;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  line-height: 1.65em;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
 }
 
-#greeting-container {
-  margin-top: 20px;
+#main {
+  margin: 30px auto auto;
+  width: 80%;
+}
+
+.subhead {
+  font-size: 24px;
+  font-weight: 300;
+  margin-bottom: 15px;
+}
+
+a {
+  color: #b00;
+  border-bottom: 1px solid #faa;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
+/* ------ head panel ------ */
+#head {
+  color: #b00;
+  font-family: 'Source Serif Pro', serif;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+
+/* ------ content panel ------ */
+.section {
+  float: left;
+}
+
+/* ------ text-pic subpanel ------ */
+.text-pic {
+  width: 100%;
+}
+
+img {
+  float: left;
+  margin: 0 20px 20px 0;
+  width: 40%;
+}
+
+/* ------ facts subpanel ------ */
+.single-fact {
+  border-top: 1px solid #e0e0e0;
+  font-size: 14px;
+  font-weight: 300;
+  margin: 10px 0;
+  padding-top: 10px;
+}
+
+.last {
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 10px;
 }
